--- a/views/index.pug
+++ b/views/index.pug
@@ -6,3 +6,12 @@ html
 
    body
       include navbar
+
+      div(class="container")
+         div(class="row")
+            each movie in movies
+
+               div(class=" col-md-3")
+                  a(href="/movies/" + movie.name  class="thumbnail")
+                     img(src = movie.imgUrl )
+                     h3= movie.name
