--- a/views/movie.pug
+++ b/views/movie.pug
@@ -15,3 +15,4 @@ html
             div(class="col-md-3")
                img(src= movie.imgUrl)
                h3= movie.name
+               h5=movie.director
